--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,6 +1,7 @@
 asgiref==3.8.1
 certifi==2025.6.15
 charset-normalizer==3.4.2
+dj-database-url==3.0.1
 Django==5.2.2
 django-cors-headers==4.7.0
 djangorestframework==3.16.0
