--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -2,6 +2,7 @@ asgiref==3.8.1
 certifi==2025.6.15
 charset-normalizer==3.4.2
 cloudinary==1.44.1
+colorama==0.4.6
 dj-database-url==3.0.1
 Django==5.2.2
 django-cloudinary-storage==0.3.0
@@ -10,10 +11,15 @@ djangorestframework==3.16.0
 djangorestframework_simplejwt==5.5.0
 gunicorn==23.0.0
 idna==3.10
+iniconfig==2.1.0
 packaging==25.0
 pillow==11.2.1
+pluggy==1.6.0
 psycopg2-binary==2.9.10
+Pygments==2.19.2
 PyJWT==2.9.0
+pytest==8.4.1
+pytest-django==4.11.1
 python-decouple==3.8
 razorpay==1.4.2
 requests==2.32.4
