--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -7,6 +7,7 @@ dj-database-url==3.0.1
 Django==5.2.2
 django-cloudinary-storage==0.3.0
 django-cors-headers==4.7.0
+django-redis==6.0.0
 djangorestframework==3.16.0
 djangorestframework_simplejwt==5.5.0
 gunicorn==23.0.0
@@ -22,6 +23,7 @@ pytest==8.4.1
 pytest-django==4.11.1
 python-decouple==3.8
 razorpay==1.4.2
+redis==6.2.0
 requests==2.32.4
 setuptools==80.9.0
 six==1.17.0
